Fix container find operation

Make sure we compare with the end of the correct container

BUG: 438999
(cherry picked from commit e223fd501c5835eb46048681d84d4db7887221c7)